--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   </head>
   <body>
-  <a-assets>
-    <video id="rage" autoplay loop="true" src="video/rage.mp4"> </video>
-  </a-assets>
     <a-scene>
+      <a-assets>
+        <video id="rage" autoplay loop="true" src="video/rage.mp4"></video>
+        <img id = "sky" src = "skyassets/sky.png">
+      </a-assets>
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#E77861"></a-sky>
-      <a-video src="#rage" width="16" height="9" position="0 0 -20"></a-video>
+      <a-sky src = "#sky"></a-sky>
+      <a-video src="#rage" width="13" height="10" position="0 0 -20"></a-video>
       <a-text value="Mueller bullied me :("></a-text>
-      
     </a-scene>
   </body>
 </html>
